Fix duplicate exercise keys in the questionnaire chapter
Add Moodle container files for local testing.

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -2,8 +2,10 @@
 
 {% block extrahead %}
 
-<!--  MathJax (LaTex math) -->
-<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" data-aplus></script>
+<!--  MathJax (LaTex math)
+data-aplus attribute is not included here because it does not work in Moodle
+-->
+<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
 <!-- Custom course styles -->
 <link rel="stylesheet"
